--- a/users.html
+++ b/users.html
@@ -24,7 +24,7 @@
             <p>Today we'll be working with the <a href="https://randomuser.me/" target="_blank">Random User Generator API</a> to make calls using both Fetch and Async/Await to compare syntax. You do not need an API key for this activity, and can paste the endpoint for this API into the browser to see the returned data if you'd like to get an idea of what the JSON will look like.</p>
             <section id="fetchUsers">
                 <h2>Fetch User List</h2>
-                <div id="userPage1"></div>
+                <div id="userPage1" aria-live="polite"></div>
                 <nav aria-label="Pagination Navigation for Fetch Users" id="pagination1" hidden>
                     <ul>
                         <li><a href="/previousPage" aria-label="Go to the Previous Page, current page is page 1" class="btn">&lsaquo;</a></li>
@@ -39,7 +39,7 @@
 
             <section id="asyncUsers">
                 <h2>Async User List</h2>
-                <div id="userPage2"></div>
+                <div id="userPage2" aria-live="polite"></div>
                 <nav aria-label="Pagination Navigation for Async Users" id="pagination2" hidden>
                     <ul>
                         <li><a href="/previousPage" aria-label="Go to the Previous Page, current page is page 1" class="btn">&lsaquo;</a></li>
